# gls1

./: CMakeLists.txt
notes/: camera.md  coordinate_systems.md
shaders/: burgundy.frag.glsl  cube1.frag.glsl  cube1.vert.glsl  cube2.frag.glsl  cube2.vert.glsl  firebrick.frag.glsl  rectangle2.frag.glsl  rectangle2.vert.glsl  triangle1.frag.glsl
src/: CMakeLists.txt  cube1.cc  cube1.h  cube2.cc  cube2.h  engine.cc  engine.h  file.cc  file.h  input_controller.cc  input_controller.h  lazy_singleton.h  logger.cc  logger.h  main.cc  perspective_camera.cc  perspective_camera.h  rectangle1.cc  rectangle1.h  rectangle2.cc  rectangle2.h  render_object.h  renderer.cc  renderer.h  rendering_program.cc  rendering_program.h  texture.cc  texture.h  triangle1.cc  triangle1.h  window.cc  window.h
